--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "reactstrap": "^8.7.1",
+    "reactstrap-date-picker": "0.0.11",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
